--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     repositories {
+        maven {url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
     }
     dependencies {
@@ -12,6 +13,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
         maven { url "https://jitpack.io" }
     }
